experimental/ir/testdata/options/validate/optimize_lite.proto.yaml.stderr.txt
warning: unused import "heavy2.proto"
  --> heavy2.proto:4:8
   |
 4 | import "heavy1.proto";
   |        ^^^^^^^^^^^^^^
  help: delete it
   |
 4 | - import "heavy1.proto";
   |
   = help: no symbols from this file are referenced

error: `LITE_RUNTIME` file imported in non-`LITE_RUNTIME` file
  --> heavy2.proto:5:8
   |
 5 | import "lite1.proto";
   |        ^^^^^^^^^^^^^
  ::: lite1.proto:4:23
   |
 4 | option optimize_for = LITE_RUNTIME;
   |                       ------------ `lite1.proto` set as `LITE_RUNTIME` here
   = help: files using `LITE_RUNTIME` compile to types that use `MessageLite` or
           equivalent in some runtimes, which ordinary message types cannot
           depend on

warning: unused import "heavy2.proto"
  --> heavy2.proto:5:8
   |
 5 | import "lite1.proto";
   |        ^^^^^^^^^^^^^
  help: delete it
   |
 5 | - import "lite1.proto";
   |
   = help: no symbols from this file are referenced

warning: unused import "lite1.proto"
  --> lite1.proto:6:8
   |
 6 | import "heavy1.proto";
   |        ^^^^^^^^^^^^^^
  help: delete it
   |
 6 | - import "heavy1.proto";
   |
   = help: no symbols from this file are referenced

warning: unused import "lite2.proto"
  --> lite2.proto:6:8
   |
 6 | import "lite1.proto";
   |        ^^^^^^^^^^^^^
  help: delete it
   |
 6 | - import "lite1.proto";
   |
   = help: no symbols from this file are referenced

encountered 1 error and 4 warnings
